Agregué un h1 en el index.html para que se pueda ver algo en la página

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
     <title>Bienvenidos al backend de la lista de tareas 🤞🏽</title>
 </head>
 <body>
-    
+    <h1>Bienvenidos al backend de la lista de tareas 🤞🏽</h1>
 </body>
 </html>
